protocols/tests/adders/adder_d1/didnt_end_in_step.out
error: The last executed statement in Thread 0 (transaction 'add_doesnt_end_in_step') wasn't `step()` (all threads must end their execution with a call to `step()`)
   ┌─ adders/adder_d1/add_d1.prot:39:3
   │
39 │   fork();
   │   ^^^^^^^ last statement wasn't `step()`

Trace 0 execution failed.
